adding detailed repo status query
